prost-unwrap-proto-tests/tests/ui/with_struct_invalid_ident.stderr
error: Argument must be a path literal relative to `with_original_mod` argument, e.g. `root::Something`
  --> tests/ui/with_struct_invalid_ident.rs:12:18
   |
12 |     .with_struct("A", []));
   |                  ^^^
